--- a/doc/tutorials/transformer/te_init.ipynb
+++ b/doc/tutorials/transformer/te_init.ipynb
@@ -5,98 +5,94 @@
    "id": "b0273b6a-8147-49d6-9591-c5434db58bc1",
    "metadata": {},
    "source": [
-    "Here we will perform all the necessary steps to get the Transformer Extension functionality up and running. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> for details on the required initialization steps. Note the installation of the extension is included in the installation of this product, therefore the first step mentioned in the guide can be skipped.\n",
+    "# Transformer Extension initialization\n",
+    "\n",
+    "Here we will perform all the necessary steps to get the Transformer Extension functionality up and running. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> for details on the required initialization steps. The extension module should have already been installed during the installation of this product, therefore the first step mentioned in the guide can be skipped.\n",
     "\n",
     "We will be using a generic prediction UDF script. To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
+    "## Prerequisites\n",
+    "\n",
     "Prior to using this notebook one needs to complete the follow steps:\n",
-    "1. [Create the database schema](../setup_db.ipynb)."
+    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "\n",
+    "## Set up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "7433e5e3-5258-4773-b202-7aa1b05303ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "from dataclasses import dataclass\n",
+    "#TODO: start using the secret store.\n",
     "\n",
-    "@dataclass\n",
-    "class SandboxConfig:\n",
-    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "    HOST_PORT = \"8888\"\n",
+    "from collections import UserDict\n",
     "\n",
-    "    @property\n",
-    "    def EXTERNAL_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
+    "class Secrets(UserDict):\n",
+    "    \"\"\"This class mimics the Secret Store we will start using soon.\"\"\"\n",
     "\n",
-    "    USER = \"sys\"\n",
-    "    PASSWORD = \"exasol\"\n",
-    "    BUCKETFS_PORT = \"6666\"\n",
-    "    BUCKETFS_USER = \"w\"\n",
-    "    BUCKETFS_PASSWORD = \"write\"\n",
-    "    BUCKETFS_USE_HTTPS = False\n",
-    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "    BUCKETFS_BUCKET = \"default\"\n",
+    "    def save(self, key: str, value: str) -> \"Secrets\":\n",
+    "        self[key] = value\n",
+    "        return self\n",
     "\n",
-    "    @property\n",
-    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
+    "# For now just hardcode the configuration.\n",
+    "sb_config = Secrets({    \n",
+    "    'EXTERNAL_HOST_NAME': '192.168.124.93',\n",
+    "    'HOST_PORT': '8888',\n",
+    "    'USER': 'sys',\n",
+    "    'PASSWORD': 'exasol',\n",
+    "    'BUCKETFS_PORT': '6666',\n",
+    "    'BUCKETFS_USER': 'w',\n",
+    "    'BUCKETFS_PASSWORD': 'write',\n",
+    "    'BUCKETFS_USE_HTTPS': 'False',\n",
+    "    'BUCKETFS_SERVICE': 'bfsdefault',\n",
+    "    'BUCKETFS_BUCKET': 'default',\n",
+    "    'SCRIPT_LANGUAGE_NAME': 'PYTHON3_60',\n",
+    "    'UDF_FLAVOR': 'python3-ds-EXASOL-6.0.0',\n",
+    "    'UDF_RELEASE': '20190116',\n",
+    "    'UDF_CLIENT': 'exaudfclient_py3',\n",
+    "    'SCHEMA': 'IDA'\n",
+    "})\n",
     "\n",
-    "    @property\n",
-    "    def BUCKETFS_URL_PREFIX(self):\n",
-    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
+    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77ca3b4-d377-47c4-8dca-cd7da3e5da40",
+   "metadata": {},
+   "source": [
+    "We will add some new variables specific to the Transformer Extension."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6bcaef63-06a3-40c1-aaa2-552d78c77125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
     "\n",
-    "    @property\n",
-    "    def BUCKETFS_PATH(self):\n",
-    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
+    "# Huggingface token required for downloading private models.\n",
+    "sb_config.save('TE_TOKEN', '')\n",
     "\n",
-    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "    UDF_RELEASE= \"20190116\"\n",
-    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "    SCHEMA = \"IDA\"\n",
+    "# Name of the connection encapsulating the Huggingface token. Leave it empty if the token is not used.\n",
+    "sb_config.save('TE_TOKEN_CONN', '')\n",
     "\n",
-    "    @property\n",
-    "    def SCRIPT_LANGUAGES(self):\n",
-    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
+    "# Name of the BucketFS connection.\n",
+    "sb_config.save('TE_BFS_CONN', 'MyBFSConn')\n",
     "\n",
-    "    @property\n",
-    "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
+    "# Name of a sub-directory of the bucket root.\n",
+    "sb_config.save('TE_BFS_DIR', 'my_storage')\n",
     "\n",
-    "    @property\n",
-    "    def params(self):\n",
-    "        return {\n",
-    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
-    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
-    "            \"schema\": self.SCHEMA,\n",
-    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
-    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
-    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
-    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
-    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
-    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
-    "        }\n",
-    "\n",
-    "    # Name of the BucketFS connection\n",
-    "    BFS_CONN = 'MyBFSConn'\n",
-    "\n",
-    "    # Name of a sub-directory of the bucket root\n",
-    "    BFS_DIR = 'my_storage'\n",
-    "\n",
-    "    # We will store all models in this sub-directory at BucketFS\n",
-    "    TE_MODELS_DIR = 'models'\n",
+    "# We will store all models in this sub-directory at BucketFS.\n",
+    "sb_config.save('TE_MODELS_BFS_DIR', 'models')\n",
     "    \n",
-    "    # We will save cached model in this sub-directory relative to the current directory on the local machine.\n",
-    "    TE_MODELS_CACHE_DIR = 'models_cache'\n",
-    "\n",
-    "conf = SandboxConfig()"
+    "# We will save cached model in this sub-directory relative to the current directory on the local machine.\n",
+    "sb_config.save('TE_MODELS_CACHE_DIR', 'models_cache')"
    ]
   },
   {
@@ -104,7 +100,7 @@
    "id": "2f52f81c-5b0d-45b9-be11-def723aa4d25",
    "metadata": {},
    "source": [
-    "First, let's upload into the BucketFS and activate the required Script-Language-Container (SLC). This can be done by running the command below."
+    "## Upload and activate the Script-Language-Container (SLC)"
    ]
   },
   {
@@ -116,23 +112,22 @@
    "source": [
     "deploy_command = f\"\"\"\n",
     "python -m exasol_transformers_extension.deploy language-container \\\n",
-    "    --dsn {conf.EXTERNAL_HOST} \\\n",
-    "    --db-user {conf.USER} \\\n",
-    "    --db-pass {conf.PASSWORD} \\\n",
-    "    --bucketfs-name {conf.BUCKETFS_SERVICE} \\\n",
-    "    --bucketfs-host {conf.EXTERNAL_HOST_NAME} \\\n",
-    "    --bucketfs-port {conf.BUCKETFS_PORT} \\\n",
-    "    --bucketfs-user {conf.BUCKETFS_USER} \\\n",
-    "    --bucketfs-password {conf.BUCKETFS_PASSWORD} \\\n",
-    "    --bucketfs-use-https {conf.BUCKETFS_USE_HTTPS} \\\n",
-    "    --bucket {conf.BUCKETFS_BUCKET} \\\n",
+    "    --dsn {EXTERNAL_HOST} \\\n",
+    "    --db-user {sb_config.get('USER')} \\\n",
+    "    --db-pass {sb_config.get('PASSWORD')} \\\n",
+    "    --bucketfs-name {sb_config.get('BUCKETFS_SERVICE')} \\\n",
+    "    --bucketfs-host {sb_config.get('EXTERNAL_HOST_NAME')} \\\n",
+    "    --bucketfs-port {sb_config.get('BUCKETFS_PORT')} \\\n",
+    "    --bucketfs-user {sb_config.get('BUCKETFS_USER')} \\\n",
+    "    --bucketfs-password {sb_config.get('BUCKETFS_PASSWORD')} \\\n",
+    "    --bucketfs-use-https {sb_config.get('BUCKETFS_USE_HTTPS')} \\\n",
+    "    --bucket {sb_config.get('BUCKETFS_BUCKET')} \\\n",
     "    --path-in-bucket . \\\n",
-    "    --language-alias {conf.SCRIPT_LANGUAGE_NAME} \\\n",
+    "    --language-alias {sb_config.get('SCRIPT_LANGUAGE_NAME')} \\\n",
     "    --version 0.5.0\n",
     "\"\"\"\n",
     "\n",
-    "# !{deploy_command}\n",
-    "print(deploy_command)"
+    "!{deploy_command}"
    ]
   },
   {
@@ -140,8 +135,9 @@
    "id": "13d94696-6083-4099-853c-1193d6d111a0",
    "metadata": {},
    "source": [
-    "Now we shall upload all scripts into the database.\n",
-    "Note, that the SLC must be uploaded first. "
+    "## Create objects in the database.\n",
+    "### Scripts\n",
+    "Once the SLC is installed we can upload all the required scripts into the database. "
    ]
   },
   {
@@ -153,14 +149,13 @@
    "source": [
     "deploy_command = f\"\"\"\n",
     "python -m exasol_transformers_extension.deploy scripts \\\n",
-    "    --dsn {conf.EXTERNAL_HOST} \\\n",
-    "    --db-user {conf.USER} \\\n",
-    "    --db-pass {conf.PASSWORD} \\\n",
-    "    --schema {conf.SCHEMA} \\\n",
-    "    --language-alias {conf.SCRIPT_LANGUAGE_NAME} \\\n",
+    "    --dsn {EXTERNAL_HOST} \\\n",
+    "    --db-user {sb_config.get('USER')} \\\n",
+    "    --db-pass {sb_config.get('PASSWORD')} \\\n",
+    "    --schema {sb_config.get('SCHEMA')} \\\n",
+    "    --language-alias {sb_config.get('SCRIPT_LANGUAGE_NAME')} \\\n",
     "    --no-use-ssl-cert-validation\n",
     "\"\"\"\n",
-    "print(deploy_command)\n",
     "\n",
     "!{deploy_command}"
    ]
@@ -170,6 +165,7 @@
    "id": "63f239be-7e7d-4f1a-8e49-72040254d00d",
    "metadata": {},
    "source": [
+    "### BucketFS connection\n",
     "Let's create a connection to the BucketFS where we are going to store all our models. We will use this connection hereafter in the queries.\n",
     "\n",
     "Notice that we specify a sub-directory of the bucket root, e.g. \"my_storage\" (the name can be chosen arbitrarily). The BucketFS will create this sub-directory for us the first time we use the connection."
@@ -177,22 +173,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "85ca87cc-1e1e-4289-9898-f7c1e3747de7",
+   "execution_count": 18,
+   "id": "383d7ea8-85dd-43f9-89b2-682060349e83",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyexasol\n",
     "\n",
+    "bfs_host = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('BUCKETFS_PORT')}\"\n",
+    "bfs_url_prefix = 'https://' if sb_config.get('BUCKETFS_USE_HTTPS').lower() == 'true' else 'http://'\n",
+    "bfs_dest = f\"{bfs_url_prefix}{bfs_host}/{sb_config.get('BUCKETFS_BUCKET')}/{sb_config.get('TE_BFS_DIR')};{sb_config.get('BUCKETFS_SERVICE')}\"\n",
+    "\n",
     "sql = f\"\"\"\n",
-    "CREATE OR REPLACE CONNECTION [{conf.BFS_CONN}]\n",
-    "    TO '{conf.BUCKETFS_URL_PREFIX}{conf.EXTERNAL_BUCKETFS_HOST}/{conf.BUCKETFS_BUCKET}/{conf.BFS_DIR};{conf.BUCKETFS_SERVICE}'\n",
+    "CREATE OR REPLACE CONNECTION [{sb_config.get('TE_BFS_CONN')}]\n",
+    "    TO '{bfs_dest}'\n",
     "    USER {{BUCKETFS_USER!s}}\n",
     "    IDENTIFIED BY {{BUCKETFS_PASSWORD!s}}\n",
     "\"\"\"\n",
+    "query_params = {\n",
+    "    \"BUCKETFS_USER\": sb_config.get('BUCKETFS_USER'), \n",
+    "    \"BUCKETFS_PASSWORD\": sb_config.get('BUCKETFS_PASSWORD')\n",
+    "}\n",
+    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "    conn.execute(query=sql, query_params=query_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30957aea-8c8e-4c15-b8a9-5e3a200f12a9",
+   "metadata": {},
+   "source": [
+    "### Huggingface token connection\n",
     "\n",
-    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
-    "    conn.execute(query=sql, query_params=conf.params)"
+    "If we need to use Huggingface token let's put it into an Exaso connection object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c0715b35-9a6c-4809-aa7a-1460fe7bf41b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyexasol\n",
+    "\n",
+    "if sb_config.get('TE_TOKEN_CONN'):\n",
+    "    sql = f\"\"\"\n",
+    "    CREATE OR REPLACE CONNECTION [{sb_config.get('TE_TOKEN_CONN')}]\n",
+    "        TO ''\n",
+    "        IDENTIFIED BY {{TOKEN!s}}\n",
+    "    \"\"\"\n",
+    "    query_params = {\"TOKEN\": sb_config.get('TE_TOKEN')}\n",
+    "    with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "        conn.execute(query=sql, query_params=query_params)"
    ]
   },
   {
@@ -200,6 +233,8 @@
    "id": "d6fc18b3-4e98-4f59-b22b-5ba87c9997cc",
    "metadata": {},
    "source": [
+    "## Dependencies\n",
+    "\n",
     "Some models require the [Sacremoses tokenizer](https://github.com/alvations/sacremoses) to be installed in the local environment when they get downloaded. Let's make sure we have it installed by running the command below."
    ]
   },
