--- a/doc/tutorials/transformer/text_generation.ipynb
+++ b/doc/tutorials/transformer/text_generation.ipynb
@@ -5,99 +5,67 @@
    "id": "b73a1de2-05df-49ab-bec9-897f11dbe9a9",
    "metadata": {},
    "source": [
+    "# Generative text model\n",
+    "\n",
     "In this notebook we will load and use a generative language model that can produce a continuation for a given text. Learn more about the Text Generation task <a href=\"https://huggingface.co/tasks/text-generation\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
     "\n",
     "We will be using a generic prediction UDF script. To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
+    "## Prerequisites\n",
+    "\n",
     "Prior to using this notebook one needs to complete the follow steps:\n",
-    "1. [Create the database schema](../setup_db.ipynb).\n",
-    "2. [Initialize the Transformer Extension](te_init.ipynb)."
+    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
+    "\n",
+    "## Set up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "83b93680-738d-4b70-aa51-117b10d63915",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "from dataclasses import dataclass\n",
+    "#TODO: start using the secret store.\n",
     "\n",
-    "@dataclass\n",
-    "class SandboxConfig:\n",
-    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "    HOST_PORT = \"8888\"\n",
+    "from collections import UserDict\n",
     "\n",
-    "    @property\n",
-    "    def EXTERNAL_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
+    "class Secrets(UserDict):\n",
+    "    \"\"\"This class mimics the Secret Store we will start using soon.\"\"\"\n",
     "\n",
-    "    USER = \"sys\"\n",
-    "    PASSWORD = \"exasol\"\n",
-    "    BUCKETFS_PORT = \"6666\"\n",
-    "    BUCKETFS_USER = \"w\"\n",
-    "    BUCKETFS_PASSWORD = \"write\"\n",
-    "    BUCKETFS_USE_HTTPS = False\n",
-    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "    BUCKETFS_BUCKET = \"default\"\n",
+    "    def save(self, key: str, value: str) -> \"Secrets\":\n",
+    "        self[key] = value\n",
+    "        return self\n",
     "\n",
-    "    @property\n",
-    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
+    "# For now just hardcode the configuration.\n",
+    "sb_config = Secrets({\n",
+    "    'EXTERNAL_HOST_NAME': '192.168.124.93',\n",
+    "    'HOST_PORT': '8888',\n",
+    "    'USER': 'sys',\n",
+    "    'PASSWORD': 'exasol',\n",
+    "    'BUCKETFS_PORT': '6666',\n",
+    "    'BUCKETFS_USER': 'w',\n",
+    "    'BUCKETFS_PASSWORD': 'write',\n",
+    "    'BUCKETFS_USE_HTTPS': 'False',\n",
+    "    'BUCKETFS_SERVICE': 'bfsdefault',\n",
+    "    'BUCKETFS_BUCKET': 'default',\n",
+    "    'SCRIPT_LANGUAGE_NAME': 'PYTHON3_60',\n",
+    "    'UDF_FLAVOR': 'python3-ds-EXASOL-6.0.0',\n",
+    "    'UDF_RELEASE': '20190116',\n",
+    "    'UDF_CLIENT': 'exaudfclient_py3',\n",
+    "    'SCHEMA': 'IDA',\n",
+    "    'TE_TOKEN': '',\n",
+    "    'TE_TOKEN_CONN': '',\n",
+    "    'TE_BFS_CONN': 'MyBFSConn',\n",
+    "    'TE_BFS_DIR': 'my_storage',\n",
+    "    'TE_MODELS_BFS_DIR': 'models',\n",
+    "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
+    "})\n",
     "\n",
-    "    @property\n",
-    "    def BUCKETFS_URL_PREFIX(self):\n",
-    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_PATH(self):\n",
-    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
-    "\n",
-    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "    UDF_RELEASE= \"20190116\"\n",
-    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "    SCHEMA = \"IDA\"\n",
-    "\n",
-    "    @property\n",
-    "    def SCRIPT_LANGUAGES(self):\n",
-    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
-    "\n",
-    "    @property\n",
-    "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
-    "\n",
-    "    @property\n",
-    "    def params(self):\n",
-    "        return {\n",
-    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
-    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
-    "            \"schema\": self.SCHEMA,\n",
-    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
-    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
-    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
-    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
-    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
-    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
-    "        }\n",
-    "\n",
-    "    # Name of the BucketFS connection\n",
-    "    BFS_CONN = 'MyBFSConn'\n",
-    "\n",
-    "    # Name of a sub-directory of the bucket root\n",
-    "    BFS_DIR = 'my_storage'\n",
-    "\n",
-    "    # We will store all models in this sub-directory at BucketFS\n",
-    "    TE_MODELS_DIR = 'models'\n",
-    "    \n",
-    "    # We will save cached model in this sub-directory relative to the current directory on the local machine.\n",
-    "    TE_MODELS_CACHE_DIR = 'models_cache'\n",
-    "\n",
-    "conf = SandboxConfig()"
+    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -105,22 +73,16 @@
    "id": "6d11a1d4-051d-4d21-990a-660beaeb8f0c",
    "metadata": {},
    "source": [
-    "First we need to download a model from the Huggingface Hub and put into the BucketFS.\n",
-    "\n",
-    "There are two ways of doing this.\n",
-    "1. Using the `TE_MODEL_DOWNLOADER_UDF` UDF.\n",
-    "2. Downloading a model to a local drive and subsequently uploading in into the BucketFS using a CLI.\n",
-    "\n",
-    "In this notebook we will use the second method.\n",
+    "## Get language model\n",
     "\n",
     "To demonstrate the text generation task we will use [Open Pretrained Transformers (OPT)](https://huggingface.co/facebook/opt-125m), a decoder-only pre-trained transformer from Facebook.\n",
     "\n",
-    "This is a public model, therefore the last parameter - the name of the Huggingface token connection - can be an empty string."
+    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately we cannot tell exactly when it has finished. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "d73c9b44-93a0-4df3-9a8e-54e182027d61",
    "metadata": {},
    "outputs": [],
@@ -131,45 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "57029a52-064b-4fda-80bf-289cce50ffc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading (…)okenizer_config.json: 100%|█████████████████████████████████████████████████████████████| 685/685 [00:00<00:00, 80.6kB/s]\n",
+      "Downloading (…)lve/main/config.json: 100%|██████████████████████████████████████████████████████████████| 651/651 [00:00<00:00, 996kB/s]\n",
+      "Downloading (…)olve/main/vocab.json: 100%|███████████████████████████████████████████████████████████| 899k/899k [00:00<00:00, 5.27MB/s]\n",
+      "Downloading (…)olve/main/merges.txt: 100%|███████████████████████████████████████████████████████████| 456k/456k [00:00<00:00, 3.05MB/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████████████████████████████████████████████████████████| 441/441 [00:00<00:00, 325kB/s]\n",
+      "Downloading pytorch_model.bin: 100%|█████████████████████████████████████████████████████████████████| 251M/251M [00:14<00:00, 17.6MB/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, cache_dir=conf.TE_MODELS_CACHE_DIR)\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(MODEL_NAME, cache_dir=conf.TE_MODELS_CACHE_DIR)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6cf6786e-1883-4ff7-8014-338e9cdedc19",
-   "metadata": {},
-   "source": [
-    "Now we can upload the model into the BucketFS using a command line. Unfortunately we cannot tell exactly when this process has finished. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "20b28eb8-0900-42be-96c3-94344abdcbc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upload_command = f\"\"\"python -m exasol_transformers_extension.upload_model \\\n",
-    "    --bucketfs-name {conf.BUCKETFS_SERVICE} \\\n",
-    "    --bucketfs-host {conf.EXTERNAL_HOST_NAME} \\\n",
-    "    --bucketfs-port {conf.BUCKETFS_PORT} \\\n",
-    "    --bucketfs-user {conf.BUCKETFS_USER} \\\n",
-    "    --bucketfs-password {conf.BUCKETFS_PASSWORD} \\\n",
-    "    --bucket {conf.BUCKETFS_BUCKET} \\\n",
-    "    --path-in-bucket {conf.BFS_DIR} \\\n",
-    "    --model-name {MODEL_NAME}  \\\n",
-    "    --sub-dir {conf.TE_MODELS_DIR} \\\n",
-    "    --local-model-path {conf.TE_MODELS_CACHE_DIR}\n",
-    "    \"\"\"\n",
-    "!{upload_command}"
+    "%run ./model_retrieval.ipynb\n",
+    "load_huggingface_model(MODEL_NAME, sb_config)"
    ]
   },
   {
@@ -177,12 +120,14 @@
    "id": "b4efa927-aa78-4b80-9b78-25e722904217",
    "metadata": {},
    "source": [
+    "## Use language model\n",
+    "\n",
     "Let's put the start of our conversation in a variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "aa3998b7-d886-4b0c-b0d2-92e54cc27b91",
    "metadata": {},
    "outputs": [],
@@ -195,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "56498899-79f8-471e-8337-983184dcd513",
    "metadata": {},
    "outputs": [],
@@ -203,6 +148,16 @@
     "# Let's put a limit on the length of text the model can generate in one call.\n",
     "# The limit is specified in the number of characters.\n",
     "MAX_LENGTH = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "94a45b81-29e3-40f8-9bb8-4b7a5c6eb28c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyexasol"
    ]
   },
   {
@@ -216,19 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc21bb8f-29e4-4718-b01a-ec3fafffeee0",
+   "execution_count": 46,
+   "id": "51b0d826-519a-4e03-9ce0-3827d0756f1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The bar-headed goose can fly at much higher speeds than the average goose.\n",
+      "I'm not sure if you're being sarcastic or not, but the bar-headed goose is\n"
+     ]
+    }
+   ],
    "source": [
-    "import pyexasol\n",
-    "\n",
     "sql = f\"\"\"\n",
-    "SELECT {conf.SCHEMA}.TE_TEXT_GENERATION_UDF(\n",
+    "SELECT {sb_config.get(\"SCHEMA\")}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
-    "    '{conf.BFS_CONN}',\n",
-    "    NULL,\n",
-    "    '{conf.TE_MODELS_DIR}',\n",
+    "    '{sb_config.get(\"TE_BFS_CONN\")}',\n",
+    "    '{sb_config.get(\"TE_TOKEN_CONN\")}',\n",
+    "    '{sb_config.get(\"TE_MODELS_BFS_DIR\")}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
     "    {MAX_LENGTH},\n",
@@ -236,14 +198,22 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
-    "    result = conn.export_to_pandas(query_or_table=sql, query_params=conf.params).squeeze()\n",
+    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "    result = conn.export_to_pandas(query_or_table=sql).squeeze()\n",
     "    MY_TEXT = result['GENERATED_TEXT']\n",
     "    # The error can be observed at result['ERROR_MESSAGE']\n",
     "\n",
     "print(MY_TEXT)\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30974b1a-a5b5-44d9-97c8-774be0dd4608",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
