--- a/doc/tutorials/transformer/zero_shot_classification.ipynb
+++ b/doc/tutorials/transformer/zero_shot_classification.ipynb
@@ -5,99 +5,67 @@
    "id": "50507999-7f6c-4ee2-9d21-657f43dbbee8",
    "metadata": {},
    "source": [
+    "# Zero-shot classification model\n",
+    "\n",
     "In this notebook we will load and use a zero shot classification language model. Learn about the Zero Shot Classification task <a href=\"https://huggingface.co/tasks/zero-shot-classification\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
+    "## Prerequisites\n",
+    "\n",
     "Prior to using this notebook one needs to complete the follow steps:\n",
-    "1. [Create the database schema](../setup_db.ipynb).\n",
-    "2. [Initialize the Transformer Extension](te_init.ipynb)."
+    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
+    "\n",
+    "## Set up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "f5c3c1e2-cd6d-4fa7-b992-01b4099b0a72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "from dataclasses import dataclass\n",
+    "#TODO: start using the secret store.\n",
     "\n",
-    "@dataclass\n",
-    "class SandboxConfig:\n",
-    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "    HOST_PORT = \"8888\"\n",
+    "from collections import UserDict\n",
     "\n",
-    "    @property\n",
-    "    def EXTERNAL_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
+    "class Secrets(UserDict):\n",
+    "    \"\"\"This class mimics the Secret Store we will start using soon.\"\"\"\n",
     "\n",
-    "    USER = \"sys\"\n",
-    "    PASSWORD = \"exasol\"\n",
-    "    BUCKETFS_PORT = \"6666\"\n",
-    "    BUCKETFS_USER = \"w\"\n",
-    "    BUCKETFS_PASSWORD = \"write\"\n",
-    "    BUCKETFS_USE_HTTPS = False\n",
-    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "    BUCKETFS_BUCKET = \"default\"\n",
+    "    def save(self, key: str, value: str) -> \"Secrets\":\n",
+    "        self[key] = value\n",
+    "        return self\n",
     "\n",
-    "    @property\n",
-    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
+    "# For now just hardcode the configuration.\n",
+    "sb_config = Secrets({\n",
+    "    'EXTERNAL_HOST_NAME': '192.168.124.93',\n",
+    "    'HOST_PORT': '8888',\n",
+    "    'USER': 'sys',\n",
+    "    'PASSWORD': 'exasol',\n",
+    "    'BUCKETFS_PORT': '6666',\n",
+    "    'BUCKETFS_USER': 'w',\n",
+    "    'BUCKETFS_PASSWORD': 'write',\n",
+    "    'BUCKETFS_USE_HTTPS': 'False',\n",
+    "    'BUCKETFS_SERVICE': 'bfsdefault',\n",
+    "    'BUCKETFS_BUCKET': 'default',\n",
+    "    'SCRIPT_LANGUAGE_NAME': 'PYTHON3_60',\n",
+    "    'UDF_FLAVOR': 'python3-ds-EXASOL-6.0.0',\n",
+    "    'UDF_RELEASE': '20190116',\n",
+    "    'UDF_CLIENT': 'exaudfclient_py3',\n",
+    "    'SCHEMA': 'IDA',\n",
+    "    'TE_TOKEN': '',\n",
+    "    'TE_TOKEN_CONN': '',\n",
+    "    'TE_BFS_CONN': 'MyBFSConn',\n",
+    "    'TE_BFS_DIR': 'my_storage',\n",
+    "    'TE_MODELS_BFS_DIR': 'models',\n",
+    "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
+    "})\n",
     "\n",
-    "    @property\n",
-    "    def BUCKETFS_URL_PREFIX(self):\n",
-    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_PATH(self):\n",
-    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
-    "\n",
-    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "    UDF_RELEASE= \"20190116\"\n",
-    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "    SCHEMA = \"IDA\"\n",
-    "\n",
-    "    @property\n",
-    "    def SCRIPT_LANGUAGES(self):\n",
-    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
-    "\n",
-    "    @property\n",
-    "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
-    "\n",
-    "    @property\n",
-    "    def params(self):\n",
-    "        return {\n",
-    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
-    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
-    "            \"schema\": self.SCHEMA,\n",
-    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
-    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
-    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
-    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
-    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
-    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
-    "        }\n",
-    "\n",
-    "    # Name of the BucketFS connection\n",
-    "    BFS_CONN = 'MyBFSConn'\n",
-    "\n",
-    "    # Name of a sub-directory of the bucket root\n",
-    "    BFS_DIR = 'my_storage'\n",
-    "\n",
-    "    # We will store all models in this sub-directory at BucketFS\n",
-    "    TE_MODELS_DIR = 'models'\n",
-    "    \n",
-    "    # We will save cached model in this sub-directory relative to the current directory on the local machine.\n",
-    "    TE_MODELS_CACHE_DIR = 'models_cache'\n",
-    "\n",
-    "conf = SandboxConfig()"
+    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -105,19 +73,28 @@
    "id": "19c23f14-f56d-45d9-9b58-4c343a54e46c",
    "metadata": {},
    "source": [
-    "First let's bring up the JupySQL and connect to the database via the SQLAlchemy. Please refer to the documentation in the <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation in the <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3874261b-9c57-48ef-a4e7-8a47af64fd15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = create_engine(conf.WEBSOCKET_URL)\n",
+    "engine = create_engine(WEBSOCKET_URL)\n",
     "\n",
     "%load_ext sql\n",
     "%sql engine"
@@ -128,30 +105,22 @@
    "id": "af7aca6a-5479-41ec-936c-d2cac34b6b11",
    "metadata": {},
    "source": [
-    "Now we will download a model from the Huggingface Hub and put into the BucketFS.\n",
+    "## Get language model\n",
     "\n",
-    "There are two ways of doing this.\n",
-    "1. Using the `TE_MODEL_DOWNLOADER_UDF` UDF.\n",
-    "2. Downloading a model to a local drive and subsequently uploading in into the BucketFS using a CLI.\n",
+    "To demonstrate the zero shot classification task we will use the [Cross-Encoder for Natural Language Inference](https://huggingface.co/cross-encoder/nli-deberta-base).\n",
     "\n",
-    "The first method requires the database machine to have internet access. Here we assume this condition is met. Otherwise please refer to another notebook where the second method is demonstrated.\n",
-    "\n",
-    "To demonstrate the zero shot classification task we will use the [DistilBERT base model](https://huggingface.co/typeform/distilbert-base-uncased-mnli).\n",
-    "\n",
-    "This is a public model, therefore the last parameter - the name of the Huggingface token connection - can be an empty string.\n",
-    "\n",
-    "Please note that loading a model, especially a big one, may take considerable time. At the time of writing we do not have any means to check the completion of this process. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
+    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately we cannot tell exactly when it has finished. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "cc473cf7-957b-491c-8925-40e0341ab78a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the name of the model at the Huggingface Hub\n",
-    "MODEL_NAME = 'typeform/distilbert-base-uncased-mnli'"
+    "MODEL_NAME = 'cross-encoder/nli-deberta-base'"
    ]
   },
   {
@@ -161,18 +130,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
-    "SELECT TE_MODEL_DOWNLOADER_UDF(\n",
-    "    '{{MODEL_NAME}}',\n",
-    "    '{{conf.TE_MODELS_DIR}}',\n",
-    "    '{{conf.BFS_CONN}}',\n",
-    "    ''\n",
-    ")"
+    "%run ./model_retrieval.ipynb\n",
+    "load_huggingface_model(MODEL_NAME, sb_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ae22cbe-92c7-44a1-af67-155cf78de7ac",
+   "metadata": {},
+   "source": [
+    "## Use language model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "81271ed8-b61e-4aeb-ac9b-6a12d72de897",
    "metadata": {},
    "outputs": [],
@@ -211,9 +183,9 @@
     "(\n",
     "    SELECT TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF(\n",
     "        NULL,\n",
-    "        '{{conf.BFS_CONN}}',\n",
-    "        NULL,\n",
-    "        '{{conf.TE_MODELS_DIR}}',\n",
+    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
+    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
+    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        '{{MY_LABELS}}'\n",
